[tool.poetry]
name = "eth-pe"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.backend.dependencies]
aiofiles = "^23.2.1"
arrow = "^1.2.3"
fastapi = "^0.103.0"
numpy = "^1.25.2"
uvicorn = "^0.23.2"

[tool.poetry.group.frontend.dependencies]
requests = "^2.31.0"
streamlit = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
