[tool.poetry]
name = "eth-pe"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.3.0"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
numpy = "^1.26.2"
streamlit = "^1.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
